# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Reduced the number of names tried by http-vhosts by default.
  [Vlatko Kosturjak]

o Linux unreachable routes are now properly ignored. [David Fifield]

o [NSE] Added smb-vuln-ms10-054 script which check the target system for MS10-054
  vulnerability in SMB. [Aleksandar] 

o [NSE] Added rdp library and the script rdp-enum-encryption that enumerates
  both the Security Layer and Encryption level of the RDP service. [Patrik
  Karlsson]

o [NSE] Added flume-master-info by John Bond. This script gets info
  from Apache Flume, which is a log collection service.

o Fixed a bug that prevented Nmap from finding any interfaces when any
  interface had the type ARPHRD_VOID; this was the case for OpenVZ
  venet interfaces. [Djalal Harouni, David Fifield]

o [Zenmap] Fixed a crash when using the en_NG locale: "ValueError:
  unknown locale: en_NG" [David Fifield]

o [NSE] Added http-get by Alex Weber. This script looks for a .git
  repository directory accesible over HTTP and extracts useful
  information from it.

o [NSE] Fixed some bugs in snmp-interfaces which prevented the script from
  outputting discovered interface info and caused it to abort in the
  pre-scanning phase. [jah]

o [NSE] lltd-discovery scripts now parses for hostnames and outputs network
  card manufacturer. [Hani Benhabiles]

o [NSE] Complete change to sip-enum-users script which now uses brute.lua for
  enumeration and supports iterating over custom username lists and numeric
  ranges. [Hani Benhabiles]

o Added protocol specific payloads for IPv6 hop-by-hop (0x00), routing (0x2b),
  fragment (0x2c), and destination (0x3c). [Sean Rivera] 

o [NSE] Added http-slowloris script which performes a slowloris DoS attack
  against a Web server and reports if it's vulnerable or not. [Aleksandar Nikolic]

o Added a new --disable-arp-ping option. This option prevents Nmap
  from implicitly using ARP or ND host discovery for directly